# cohida

./: .env.backup  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  env.example  podman-compose.prod.yml  pytest.ini  requirements.txt  spec.md  tags.atom
.github/workflows/: deploy.yml
cpp-cohida/: .dockerignore  .env.example  .env.test  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  README.md  build.sh  docker-compose.test.yml  docker-compose.yml  tasks_log.txt  test.sh  vcpkg.json
cpp-cohida/custom_ports/boost-decimal/: portfile.cmake  vcpkg.json
cpp-cohida/examples/: CMakeLists.txt  test_coinbase_auth.cpp  test_coinbase_client.cpp  test_config.cpp  test_database_manager.cpp
cpp-cohida/include/api/: ApiException.h  CoinbaseClient.h
cpp-cohida/include/config/: Config.h  ConfigException.h
cpp-cohida/include/data/: DataRetriever.h  FileWriter.h
cpp-cohida/include/database/: DatabaseManager.h  DbException.h
cpp-cohida/include/ml/: DataSplitter.h  FeatureEngineer.h  ModelRegistry.h  ModelTrainer.h  Preprocessor.h  TechnicalIndicators.h
cpp-cohida/include/models/: DataPoint.h
cpp-cohida/include/utils/: Logger.h
cpp-cohida/src/: main.cpp
cpp-cohida/src/api/: CoinbaseClient.cpp
cpp-cohida/src/config/: Config.cpp  dotenv_loader.h
cpp-cohida/src/data/: DataRetriever.cpp  FileWriter.cpp
cpp-cohida/src/database/: DatabaseManager.cpp  pqxx_strconv_specializations.h
cpp-cohida/src/ml/: DataSplitter.cpp  FeatureEngineer.cpp  ModelRegistry.cpp  ModelTrainer.cpp  Preprocessor.cpp  TechnicalIndicators.cpp
cpp-cohida/src/models/: DataPoint.cpp
cpp-cohida/src/utils/: Logger.cpp
cpp-cohida/tests/unit/: test_coinbase_auth.cpp  test_coinbase_client.cpp  test_data_point.cpp  test_data_retriever.cpp  test_data_splitter.cpp  test_database_manager.cpp  test_feature_engineer.cpp  test_preprocessor.cpp  test_technical_indicators.cpp
db/: postgres-p.txt
docs/: README.md  cpp_conversion_plan.md  cpp_todo.md  migration_guide.md  recommended_github_actions.md
legacy_python/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
legacy_python/src/: cli.py  coinbase_client.py  config.py  models.py
legacy_python/src/ml/: __init__.py  feature_engineer.py  model_trainer.py  preprocessor.py
legacy_python/src/ml/utils/: __init__.py
legacy_python/tests/unit/: test_coinbase_client.py  test_models.py
src/: cli.py  coinbase_client.py  config.py  data_retriever.py  database.py  models.py
src/ml/: __init__.py  model_registry.py  technical_indicators.py
src/ml/utils/: data_splitter.py
tests/e2e/: test_workflow.py
tests/integration/: test_database.py
tests/unit/: test_config.py  test_configurable_schema.py  test_models.py  test_retrieve_all.py
